v 0.3

- Add converters from PIX to BMP, and PTC to BMP.


See ChangeLog for older changes.