@@ -1,11 +1,11 @@
 v 0.3
 
 - Add converters from PIX to BMP, PTC to BMP, RGB to BMP.
-
+- Add depackers for RE3 ROFS and SLD archives.
 
 v 0.2
 
-- Added depacker for BSS and ADT image files.
+- Added depackers for BSS and ADT image files.
 
 
 v 0.1
